// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox styled components StyledCheckmark : has correct styles when  1`] = `
Object {
  "backgroundColor": "transparent",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.mono700",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $checked $isActive 1`] = `
Object {
  "backgroundColor": "$theme.colors.primary600",
  "backgroundImage": "url('data:image/svg+xml;utf8,<svg width=\\"11\\" height=\\"10\\" viewBox=\\"0 0 11 10\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M10.6 0.200059C11.0418 0.53143 11.1314 1.15823 10.8 1.60006L4.8 9.60006C4.62607 9.83197 4.36005 9.97699 4.07089 9.99754C3.78173 10.0181 3.49788 9.91215 3.29289 9.70717L0.292893 6.70717C-0.0976311 6.31664 -0.0976311 5.68348 0.292893 5.29295C0.683417 4.90243 1.31658 4.90243 1.70711 5.29295L3.89181 7.47765L9.2 0.400059C9.53137 -0.0417689 10.1582 -0.131312 10.6 0.200059Z\\" fill=\\"$theme.colors.mono100\\"/></svg>');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $checked $isFocused 1`] = `
Object {
  "backgroundColor": "$theme.colors.primary600",
  "backgroundImage": "url('data:image/svg+xml;utf8,<svg width=\\"11\\" height=\\"10\\" viewBox=\\"0 0 11 10\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M10.6 0.200059C11.0418 0.53143 11.1314 1.15823 10.8 1.60006L4.8 9.60006C4.62607 9.83197 4.36005 9.97699 4.07089 9.99754C3.78173 10.0181 3.49788 9.91215 3.29289 9.70717L0.292893 6.70717C-0.0976311 6.31664 -0.0976311 5.68348 0.292893 5.29295C0.683417 4.90243 1.31658 4.90243 1.70711 5.29295L3.89181 7.47765L9.2 0.400059C9.53137 -0.0417689 10.1582 -0.131312 10.6 0.200059Z\\" fill=\\"$theme.colors.mono100\\"/></svg>');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $checked $isHovered 1`] = `
Object {
  "backgroundColor": "$theme.colors.primary500",
  "backgroundImage": "url('data:image/svg+xml;utf8,<svg width=\\"11\\" height=\\"10\\" viewBox=\\"0 0 11 10\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M10.6 0.200059C11.0418 0.53143 11.1314 1.15823 10.8 1.60006L4.8 9.60006C4.62607 9.83197 4.36005 9.97699 4.07089 9.99754C3.78173 10.0181 3.49788 9.91215 3.29289 9.70717L0.292893 6.70717C-0.0976311 6.31664 -0.0976311 5.68348 0.292893 5.29295C0.683417 4.90243 1.31658 4.90243 1.70711 5.29295L3.89181 7.47765L9.2 0.400059C9.53137 -0.0417689 10.1582 -0.131312 10.6 0.200059Z\\" fill=\\"$theme.colors.mono100\\"/></svg>');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $checked 1`] = `
Object {
  "backgroundColor": "$theme.colors.primary400",
  "backgroundImage": "url('data:image/svg+xml;utf8,<svg width=\\"11\\" height=\\"10\\" viewBox=\\"0 0 11 10\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M10.6 0.200059C11.0418 0.53143 11.1314 1.15823 10.8 1.60006L4.8 9.60006C4.62607 9.83197 4.36005 9.97699 4.07089 9.99754C3.78173 10.0181 3.49788 9.91215 3.29289 9.70717L0.292893 6.70717C-0.0976311 6.31664 -0.0976311 5.68348 0.292893 5.29295C0.683417 4.90243 1.31658 4.90243 1.70711 5.29295L3.89181 7.47765L9.2 0.400059C9.53137 -0.0417689 10.1582 -0.131312 10.6 0.200059Z\\" fill=\\"$theme.colors.mono100\\"/></svg>');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $disabled $checked 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono300",
  "backgroundImage": "url('data:image/svg+xml;utf8,<svg width=\\"11\\" height=\\"10\\" viewBox=\\"0 0 11 10\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M10.6 0.200059C11.0418 0.53143 11.1314 1.15823 10.8 1.60006L4.8 9.60006C4.62607 9.83197 4.36005 9.97699 4.07089 9.99754C3.78173 10.0181 3.49788 9.91215 3.29289 9.70717L0.292893 6.70717C-0.0976311 6.31664 -0.0976311 5.68348 0.292893 5.29295C0.683417 4.90243 1.31658 4.90243 1.70711 5.29295L3.89181 7.47765L9.2 0.400059C9.53137 -0.0417689 10.1582 -0.131312 10.6 0.200059Z\\" fill=\\"$theme.colors.mono600\\"/></svg>');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.mono300",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $disabled 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono300",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.mono300",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isActive 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono500",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.mono700",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isError $checked $isActive 1`] = `
Object {
  "backgroundColor": "$theme.colors.negative600",
  "backgroundImage": "url('data:image/svg+xml;utf8,<svg width=\\"11\\" height=\\"10\\" viewBox=\\"0 0 11 10\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M10.6 0.200059C11.0418 0.53143 11.1314 1.15823 10.8 1.60006L4.8 9.60006C4.62607 9.83197 4.36005 9.97699 4.07089 9.99754C3.78173 10.0181 3.49788 9.91215 3.29289 9.70717L0.292893 6.70717C-0.0976311 6.31664 -0.0976311 5.68348 0.292893 5.29295C0.683417 4.90243 1.31658 4.90243 1.70711 5.29295L3.89181 7.47765L9.2 0.400059C9.53137 -0.0417689 10.1582 -0.131312 10.6 0.200059Z\\" fill=\\"$theme.colors.mono100\\"/></svg>');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isError $checked $isFocused 1`] = `
Object {
  "backgroundColor": "$theme.colors.negative600",
  "backgroundImage": "url('data:image/svg+xml;utf8,<svg width=\\"11\\" height=\\"10\\" viewBox=\\"0 0 11 10\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M10.6 0.200059C11.0418 0.53143 11.1314 1.15823 10.8 1.60006L4.8 9.60006C4.62607 9.83197 4.36005 9.97699 4.07089 9.99754C3.78173 10.0181 3.49788 9.91215 3.29289 9.70717L0.292893 6.70717C-0.0976311 6.31664 -0.0976311 5.68348 0.292893 5.29295C0.683417 4.90243 1.31658 4.90243 1.70711 5.29295L3.89181 7.47765L9.2 0.400059C9.53137 -0.0417689 10.1582 -0.131312 10.6 0.200059Z\\" fill=\\"$theme.colors.mono100\\"/></svg>');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isError $checked $isHovered 1`] = `
Object {
  "backgroundColor": "$theme.colors.negative500",
  "backgroundImage": "url('data:image/svg+xml;utf8,<svg width=\\"11\\" height=\\"10\\" viewBox=\\"0 0 11 10\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M10.6 0.200059C11.0418 0.53143 11.1314 1.15823 10.8 1.60006L4.8 9.60006C4.62607 9.83197 4.36005 9.97699 4.07089 9.99754C3.78173 10.0181 3.49788 9.91215 3.29289 9.70717L0.292893 6.70717C-0.0976311 6.31664 -0.0976311 5.68348 0.292893 5.29295C0.683417 4.90243 1.31658 4.90243 1.70711 5.29295L3.89181 7.47765L9.2 0.400059C9.53137 -0.0417689 10.1582 -0.131312 10.6 0.200059Z\\" fill=\\"$theme.colors.mono100\\"/></svg>');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isError $checked 1`] = `
Object {
  "backgroundColor": "$theme.colors.negative400",
  "backgroundImage": "url('data:image/svg+xml;utf8,<svg width=\\"11\\" height=\\"10\\" viewBox=\\"0 0 11 10\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M10.6 0.200059C11.0418 0.53143 11.1314 1.15823 10.8 1.60006L4.8 9.60006C4.62607 9.83197 4.36005 9.97699 4.07089 9.99754C3.78173 10.0181 3.49788 9.91215 3.29289 9.70717L0.292893 6.70717C-0.0976311 6.31664 -0.0976311 5.68348 0.292893 5.29295C0.683417 4.90243 1.31658 4.90243 1.70711 5.29295L3.89181 7.47765L9.2 0.400059C9.53137 -0.0417689 10.1582 -0.131312 10.6 0.200059Z\\" fill=\\"$theme.colors.mono100\\"/></svg>');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isError $isActive 1`] = `
Object {
  "backgroundColor": "$theme.colors.negative200",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.negative400",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isError $isFocused 1`] = `
Object {
  "backgroundColor": "$theme.colors.negative200",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.negative400",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isError $isHovered 1`] = `
Object {
  "backgroundColor": "$theme.colors.negative100",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.negative400",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isError 1`] = `
Object {
  "backgroundColor": "$theme.colors.negative50",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.negative400",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isFocused 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono500",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.mono700",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isHovered 1`] = `
Object {
  "backgroundColor": "$theme.colors.mono400",
  "backgroundImage": null,
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "$theme.colors.mono700",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledCheckmark : has correct styles when $isIndeterminate 1`] = `
Object {
  "backgroundColor": "$theme.colors.primary400",
  "backgroundImage": "url('data:image/svg+xml;utf8,<svg width=\\"12\\" height=\\"2\\" viewBox=\\"0 0 12 2\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><line x1=\\"1\\" y1=\\"-1\\" x2=\\"11\\" y2=\\"-1\\" transform=\\"translate(0 2)\\" stroke=\\"$theme.colors.mono100\\" stroke-width=\\"2\\" stroke-linecap=\\"round\\"/></svg>');",
  "backgroundPosition": "center",
  "backgroundRepeat": "no-repeat",
  "borderColor": "transparent",
  "borderRadius": "$theme.borders.radius200",
  "borderStyle": "solid",
  "borderWidth": "2px",
  "display": "inline-block",
  "flex": "0 0 auto",
  "height": "$theme.sizing.scale600",
  "left": "4px",
  "marginBottom": "$theme.sizing.scale0",
  "marginLeft": "$theme.sizing.scale200",
  "marginRight": "$theme.sizing.scale200",
  "marginTop": "$theme.sizing.scale0",
  "top": "4px",
  "transitionDuration": "$theme.animation.timing100",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "verticalAlign": "middle",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Checkbox styled components StyledInput : StyledInput has correct styles 1`] = `
Object {
  "height": 0,
  "margin": 0,
  "opacity": 0,
  "overflow": "hidden",
  "padding": 0,
  "width": 0,
}
`;

exports[`Checkbox styled components StyledLabel : has correct styles when  1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "flex": null,
  "fontFamily": "$theme.typography.font350.fontFamily",
  "fontSize": "$theme.typography.font350.fontSize",
  "fontWeight": "$theme.typography.font350.fontWeight",
  "lineHeight": "$theme.typography.font350.lineHeight",
  "padding": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel : has correct styles when $isError 1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "flex": null,
  "fontFamily": "$theme.typography.font350.fontFamily",
  "fontSize": "$theme.typography.font350.fontSize",
  "fontWeight": "$theme.typography.font350.fontWeight",
  "lineHeight": "$theme.typography.font350.lineHeight",
  "padding": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel : has correct styles when disabled 1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "flex": null,
  "fontFamily": "$theme.typography.font350.fontFamily",
  "fontSize": "$theme.typography.font350.fontSize",
  "fontWeight": "$theme.typography.font350.fontWeight",
  "lineHeight": "$theme.typography.font350.lineHeight",
  "padding": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel Label: StyledLabel has correct styles when set to bottom 1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "flex": null,
  "fontFamily": "$theme.typography.font350.fontFamily",
  "fontSize": "$theme.typography.font350.fontSize",
  "fontWeight": "$theme.typography.font350.fontWeight",
  "lineHeight": "$theme.typography.font350.lineHeight",
  "paddingBottom": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel Label: StyledLabel has correct styles when set to left 1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "flex": null,
  "fontFamily": "$theme.typography.font350.fontFamily",
  "fontSize": "$theme.typography.font350.fontSize",
  "fontWeight": "$theme.typography.font350.fontWeight",
  "lineHeight": "$theme.typography.font350.lineHeight",
  "paddingLeft": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel Label: StyledLabel has correct styles when set to right 1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "flex": null,
  "fontFamily": "$theme.typography.font350.fontFamily",
  "fontSize": "$theme.typography.font350.fontSize",
  "fontWeight": "$theme.typography.font350.fontWeight",
  "lineHeight": "$theme.typography.font350.lineHeight",
  "paddingRight": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledLabel Label: StyledLabel has correct styles when set to top 1`] = `
Object {
  "color": "$theme.colors.mono1000",
  "flex": null,
  "fontFamily": "$theme.typography.font350.fontFamily",
  "fontSize": "$theme.typography.font350.fontSize",
  "fontWeight": "$theme.typography.font350.fontWeight",
  "lineHeight": "$theme.typography.font350.lineHeight",
  "paddingTop": "$theme.sizing.scale200",
  "verticalAlign": "middle",
}
`;

exports[`Checkbox styled components StyledRoot : StyledRoot has correct styles 1`] = `
Object {
  "alignItems": "flex-start",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "row",
  "userSelect": "none",
}
`;

exports[`Checkbox styled components StyledRoot : has correct styles when label is placedbottom 1`] = `
Object {
  "alignItems": "center",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "column",
  "userSelect": "none",
}
`;

exports[`Checkbox styled components StyledRoot : has correct styles when label is placedleft 1`] = `
Object {
  "alignItems": "flex-start",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "row",
  "userSelect": "none",
}
`;

exports[`Checkbox styled components StyledRoot : has correct styles when label is placedright 1`] = `
Object {
  "alignItems": "flex-start",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "row",
  "userSelect": "none",
}
`;

exports[`Checkbox styled components StyledRoot : has correct styles when label is placedtop 1`] = `
Object {
  "alignItems": "center",
  "cursor": "pointer",
  "display": "flex",
  "flexDirection": "column",
  "userSelect": "none",
}
`;
